PR/50881: David Binderman: Remove redundant code.